# digital-chess-board

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml
docker/: Dockerfile
include/: file_to_string_converter.h  lichess.h  pgn.h  piece_to_string_converter.h  rank_to_string_converter.h  square_to_string_converter.h
src/: CMakeLists.txt  file_to_string_converter.cpp  lichess.cpp  main.cpp  pgn.cpp  piece_to_string_converter.cpp  rank_to_string_converter.cpp  square_to_string_converter.cpp
test/: CMakeLists.txt  hello_test.cc  lichess_test.cc  pgn_test.cc  piece_to_string_converter_test.cc  square_to_string_converter_test.cc
